--- a/Glosario/www/templates/definicionesDenunciadas.html
+++ b/Glosario/www/templates/definicionesDenunciadas.html
@@ -1,6 +1,6 @@
 <!-- Pantalla de definiciones Denunciadas-->
 
-<ion-view id="definiciones" title="Definiciones Denunciadas">
+<ion-view id="definicionesDenunciadas" title="Definiciones Denunciadas">
  	
     <ion-content padding="true" class="fondo1 has-header" has-header="true">
 		<br/>
@@ -10,21 +10,21 @@
 	  				<div ng-switch-when="true">
 	  					<label class="item item-divider"><b>Listado</b></label>
   						<ion-item class="item item-body" ng-repeat="definicion in definicionesDenunciadas">	
-		    			<div class="item-button-right">
+			    			<div class="item-button-right">
 
-			  				<b>{{definicion.termino.nombre| uppercase }}</b>
+				  				<b>{{definicion.termino.nombre| uppercase }}</b>
 
-				  			<button class="icono_derecha button button-icon" ng-click="eliminarDefinicion(definicion.id)">
-					      		<i class="icon ion-close-circled assertive"></i>
-					    	</button>
-					    	<button class="icono_derecha2 button button-icon" ng-click="recuperarDefinicion(definicion.id)">
-					      		<i class="icon ion-checkmark-circled balanced"></i>
-					    	</button>
-				    	</div>
+					  			<button class="icono_derecha button button-icon" ng-click="eliminarDefinicion(definicion.id)">
+						      		<i class="icon ion-close-circled assertive"></i>
+						    	</button>
+						    	<button class="icono_derecha2 button button-icon" ng-click="recuperarDefinicion(definicion.id)">
+						      		<i class="icon ion-checkmark-circled balanced"></i>
+						    	</button>
+					    	</div>
 
-					    <div class="defDenun concepto_definicion">
-				  			{{ definicion.definicion }}
-				  		</div>
+						    <div class="defDenun concepto_definicion">
+					  			{{ definicion.definicion }}
+					  		</div>
 				  		</ion-item>
 					</div>
 
