listar alumnos mejorada

--- a/Glosario/www/templates/agregarTermino.html
+++ b/Glosario/www/templates/agregarTermino.html
@@ -26,8 +26,9 @@
           {{ option.ensenanza }}
         </ion-radio>
       </div>
-
-      <button class="button button-full button-positive" ng-click="crearTermino(nuevoTermino)">AÑADIR</button>
+      <div class="text-center">
+        <button class="button button-positive" ng-click="crearTermino(nuevoTermino)">AÑADIR</button>
+      </div>
     </div>
   </ion-content>
 
