--- a/Glosario/www/templates/usuario.html
+++ b/Glosario/www/templates/usuario.html
@@ -19,7 +19,7 @@
 
     	<label class="item item-divider"><b>Menú de Opciones (Profesor)</b></label>
     	<ion-item href="#/tab/definicionesDenunciadas" style="font-size:1.4em;"><i class="icon ion-android-alert"></i> DEFINICIONES DENUNCIADAS</ion-item></ion-item>
-      <ion-item href="#/tab/listarAlumnos" style="font-size:1.4em;"><i class="icon ion-person-stalker"></i> LISTAR ALUMNOS</ion-item></ion-item>
+      <ion-item ng-click="grupos.show()" style="font-size:1.4em;"><i class="icon ion-person-stalker"></i> LISTAR ALUMNOS</ion-item></ion-item>
 
     </ion-list>
 
