--- a/Glosario/www/templates/listarAlumnos.html
+++ b/Glosario/www/templates/listarAlumnos.html
@@ -8,14 +8,18 @@
 
   				<div ng-switch on="comprobar">
 	  				<div ng-switch-when="true">
-	  					<label class="item item-divider"><b>Listado</b></label>
-  						<ion-item class="item item-body" ng-repeat="alumno in Alumnos">	
-					    	
-						    <div>
-					  			{{ alumno.apellido1 }} {{ alumno.apellido2 }}, {{ alumno.nombre }} 
-					  		</div>
-					  		
-				  		</ion-item>
+	  					<div class="item text-center"><h2><b>{{ensenyanza| uppercase }} ({{curso}})</b></h2></div>
+	  					<br/>
+	  					<ion-list option-buttons="itemButtons" can-swipe="true">
+		  					<label class="item item-divider"><b>Apellidos, Nombre - Nº Definiciones</b></label>
+	  						<ion-item class="item item-body" ng-repeat="alumno in Alumnos">	
+						    	
+							    <div>
+						  			{{ alumno.apellido1 }} {{ alumno.apellido2 }}, {{ alumno.nombre }} - {{ alumno.TotalDefiniciones }} 
+						  		</div>
+
+					  		</ion-item>
+					  	</ion-list>
 					</div>
 
 					<div ng-switch-when="false">
