ruta global y loading

--- a/Glosario/www/templates/materia.html
+++ b/Glosario/www/templates/materia.html
@@ -10,7 +10,7 @@
 
 			<ion-item ng-repeat="materia in materiasDisponibles" ng-model="materiaElegida" class="item item-icon-right">		
 				<div ng-click="miSeleccionMaterias(materia)">
-	  			 {{ materia.materia }} <i class="icon ion-chevron-right"></i> 
+	  			 {{ materia.ensenanza }} <i class="icon ion-chevron-right"></i> 
 	  			</div>
 
 			</ion-item>
