--- a/Glosario/www/templates/tabs.html
+++ b/Glosario/www/templates/tabs.html
@@ -1,6 +1,6 @@
 <!-- Tabs-->
 
-<ion-tabs class="tabs-icon-top tabs-positive">
+<ion-tabs class="tabs-icon-top tabs-positive" tabs-type="tabs-positive" animation="slide-left-right">
 
   <!-- Login Tab -->
   <ion-tab title="Login" icon="ion-social-googleplus" href="#/tab/login">
