--- a/Glosario/www/templates/agregarDefinicion.html
+++ b/Glosario/www/templates/agregarDefinicion.html
@@ -12,7 +12,7 @@
           <div class="list">
 
             <label class="item item-input">
-              <span class="input-label">Escribe un definición: </span>
+              <span class="input-label">Escribe una definición: </span>
               <input ng-model="nuevaDefinicion.definicion" type="text">
             </label>
 
