--- a/Glosario/www/templates/tabs.html
+++ b/Glosario/www/templates/tabs.html
@@ -9,8 +9,8 @@
 
 
   <!-- Consultar Tab -->
-  <ion-tab title="Consultar" icon="icon ion-search" href="#/tab/consultar">
-    <ion-nav-view name="consultar"></ion-nav-view>
+  <ion-tab title="Inicio" icon="icon ion-android-home" href="#/tab/inicio">
+    <ion-nav-view name="inicio"></ion-nav-view>
   </ion-tab>
 
 
