--- a/Glosario/www/templates/busquedaDirecta.html
+++ b/Glosario/www/templates/busquedaDirecta.html
@@ -6,11 +6,11 @@
  		<br/>
  		<div class="padding text-center">
 			<label class="item item-input">
-				<input type="search" placeholder="Escribe un indício" class="text-center" style="font-size:1.5em;" ng-model="miBusqueda">
+				<input type="search" placeholder="Escribe un indício" class="text-center" style="font-size:1.5em;" ng-model="miBusqueda.input">
 			</label><br/>
 
 			<div>
-				<button class="button button-light" ng-model="miBusqueda" ng-click="busqueda(miBusqueda)">
+				<button class="button button-light" ng-click="busqueda(miBusqueda)">
 				  BUSCAR COINCIDENCIAS
 				</button>
 			</div>
