--- a/Glosario/www/templates/jugar.html
+++ b/Glosario/www/templates/jugar.html
@@ -9,7 +9,7 @@
       <div class="padding">
 
         <label class="item item-divider"><b>Definición:</b></label>
-        <ion-item class="item item-body" ng-model="adivinaTermino">
+        <ion-item class="item item-body" style="text-align:justify;" ng-model="adivinaTermino">
           {{adivinaTermino.definicion}}
         </ion-item>
       </div>
